// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BaseInput - basic functionality: After gets correct error prop 1`] = `
Object {
  "$adjoined": "none",
  "$disabled": false,
  "$error": true,
  "$isFocused": false,
  "$required": false,
  "$size": "default",
}
`;

exports[`BaseInput - basic functionality: After gets correct props 1`] = `
Object {
  "$adjoined": "none",
  "$disabled": false,
  "$error": false,
  "$isFocused": false,
  "$required": false,
  "$size": "default",
}
`;

exports[`BaseInput - basic functionality: Base input has correct props 1`] = `
Object {
  "aria-describedby": null,
  "aria-invalid": false,
  "aria-label": null,
  "aria-labelledby": null,
  "aria-required": false,
  "autoComplete": "on",
  "children": null,
  "disabled": false,
  "id": undefined,
  "name": "",
  "onBlur": [Function],
  "onChange": [MockFunction],
  "onFocus": [Function],
  "onKeyDown": [MockFunction],
  "onKeyPress": [MockFunction],
  "onKeyUp": [MockFunction],
  "placeholder": "Placeholder",
  "rows": null,
  "styled-component": "true",
  "test-style": Object {
    "::placeholder": Object {
      "color": "$theme.colors.foregroundAlt",
    },
    "backgroundColor": "transparent",
    "borderStyle": "none",
    "borderWidth": "0",
    "boxSizing": "border-box",
    "caretColor": "$theme.colors.primary",
    "color": "$theme.colors.foreground",
    "cursor": "text",
    "fontFamily": "$theme.typography.font300.fontFamily",
    "fontSize": "$theme.typography.font300.fontSize",
    "fontWeight": "$theme.typography.font300.fontWeight",
    "lineHeight": "$theme.typography.font300.lineHeight",
    "maxWidth": "100%",
    "outline": "none",
    "paddingBottom": "$theme.sizing.scale400",
    "paddingLeft": "$theme.sizing.scale500",
    "paddingRight": "$theme.sizing.scale500",
    "paddingTop": "$theme.sizing.scale400",
    "width": "100%",
  },
  "type": "text",
  "value": undefined,
}
`;

exports[`BaseInput - basic functionality: Before gets correct error prop 1`] = `
Object {
  "$adjoined": "none",
  "$disabled": false,
  "$error": true,
  "$isFocused": false,
  "$required": false,
  "$size": "default",
}
`;

exports[`BaseInput - basic functionality: Before gets correct props 1`] = `
Object {
  "$adjoined": "none",
  "$disabled": false,
  "$error": false,
  "$isFocused": false,
  "$required": false,
  "$size": "default",
}
`;
